unpackaged/main/default/objects/SurveyResponse__c/SurveyResponse__c.object-meta.xml
<CustomObject>
    <label>Survey Response (ATC)</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses (ATC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>