unpackaged/main/default/objects/SurveyResponse__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SurveyResponse_Mocks</relationshipName>
    <type>Lookup</type>
</CustomField>