unpackaged/main/default/objects/SurveyResponse__c/fields/Comentario_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Adicional__c</fullName>
    <label>Comentarios (Adicionales)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>