unpackaged/main/default/objects/SurveyResponse__c/fields/Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encuesta</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Survey Responses (ATC)</relationshipLabel>
    <relationshipName>Survey_Responses_ATC</relationshipName>
    <type>Lookup</type>
</CustomField>