unpackaged/main/default/objects/SurveyResponse__c/fields/Fecha_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega__c</fullName>
    <formula>Survey_Invitation__r.Proceso_ATC__r.FechaEntrega__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de entrega</label>
    <type>Date</type>
</CustomField>