unpackaged/main/default/objects/SurveyResponse__c/fields/Fecha_de_Envio_de_Inivitaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Envio_de_Inivitaci_n__c</fullName>
    <formula>Survey_Invitation__r.Created_Date_GMT_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Envio de Inivitación</label>
    <type>Date</type>
</CustomField>