unpackaged/main/default/objects/SurveyResponse__c/fields/Fecha_de_Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Respuesta__c</fullName>
    <label>Fecha de Vencimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>