unpackaged/main/default/objects/SurveyResponse__c/fields/Fecha_de_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Vencimiento__c</fullName>
    <formula>Survey_Invitation__r.InviteExpiryDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>