unpackaged/main/default/objects/SurveyResponse__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <formula>Proceso_ATC__r.Fraccionamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>