unpackaged/main/default/objects/SurveyResponse__c/fields/IRC12__c.field-meta.xml
<CustomField>
    <fullName>IRC12__c</fullName>
    <label>IRC 3.1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>