unpackaged/main/default/objects/SurveyResponse__c/fields/IRC13__c.field-meta.xml
<CustomField>
    <fullName>IRC13__c</fullName>
    <label>IRC 3.2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>