unpackaged/main/default/objects/SurveyResponse__c/fields/IRC14__c.field-meta.xml
<CustomField>
    <fullName>IRC14__c</fullName>
    <label>IRC 3.3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>