unpackaged/main/default/objects/SurveyResponse__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <formula>Proceso_ATC__r.Manzana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manzana</label>
    <type>Text</type>
</CustomField>