unpackaged/main/default/objects/SurveyResponse__c/fields/No_Migrada__c.field-meta.xml
<CustomField>
    <fullName>No_Migrada__c</fullName>
    <formula>Survey_Invitation__r.No_Migrada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Migrada</label>
    <type>Checkbox</type>
</CustomField>