unpackaged/main/default/objects/SurveyResponse__c/fields/Nombre_de_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Encuesta__c</fullName>
    <formula>Encuesta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Encuesta</label>
    <type>Text</type>
</CustomField>