unpackaged/main/default/objects/SurveyResponse__c/fields/Proceso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso ATC</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Survey Responses (ATC)</relationshipLabel>
    <relationshipName>Survey_Responses_ATC</relationshipName>
    <type>Lookup</type>
</CustomField>