unpackaged/main/default/objects/SurveyResponse__c/fields/Response_Date_GMT_5__c.field-meta.xml
<CustomField>
    <fullName>Response_Date_GMT_5__c</fullName>
    <formula>ResponseDate__c - (5/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Date (GMT-5)</label>
    <type>DateTime</type>
</CustomField>