unpackaged/main/default/objects/SurveyResponse__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <label>Fecha y Hora de Respuesta</label>
    <type>DateTime</type>
</CustomField>