unpackaged/main/default/objects/SurveyResponse__c/fields/SA12__c.field-meta.xml
<CustomField>
    <fullName>SA12__c</fullName>
    <label>SA 1.1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>