unpackaged/main/default/objects/SurveyResponse__c/fields/SA13__c.field-meta.xml
<CustomField>
    <fullName>SA13__c</fullName>
    <label>SA 1.2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>