unpackaged/main/default/objects/SurveyResponse__c/fields/SA14__c.field-meta.xml
<CustomField>
    <fullName>SA14__c</fullName>
    <label>SA 1.3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>