unpackaged/main/default/objects/SurveyResponse__c/fields/SP12__c.field-meta.xml
<CustomField>
    <fullName>SP12__c</fullName>
    <label>SP 2.1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>