unpackaged/main/default/objects/SurveyResponse__c/fields/SP13__c.field-meta.xml
<CustomField>
    <fullName>SP13__c</fullName>
    <label>SP 2.2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>