unpackaged/main/default/objects/SurveyResponse__c/fields/SP14__c.field-meta.xml
<CustomField>
    <fullName>SP14__c</fullName>
    <label>SP 2.3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>