unpackaged/main/default/objects/SurveyResponse__c/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Invitation</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipName>SurveyResponse_Mocks</relationshipName>
    <type>Lookup</type>
</CustomField>