unpackaged/main/default/objects/SurveyResponse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Plaza__c</columns>
    <columns>Proceso_ATC__c</columns>
    <columns>Survey_Invitation__c</columns>
    <columns>Fecha_de_Envio_de_Inivitaci_n__c</columns>
    <columns>ResponseDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>