unpackaged/main/default/objects/SurveyResponse__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Plaza__c</columns>
    <columns>Proceso_ATC__c</columns>
    <columns>Survey_Invitation__c</columns>
    <columns>Fecha_de_Envio_de_Inivitaci_n__c</columns>
    <columns>ResponseDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Created This Month</label>
</ListView>